Created comparison chart of all the models

--- a/Final_attempt.ipynb
+++ b/Final_attempt.ipynb
@@ -4329,11 +4329,11 @@
         "joblib.dump(ensemble, \"ensemble_rf_xgb.pkl\")\n"
       ],
       "metadata": {
-        "id": "SD7gMMAaqvQ6",
-        "outputId": "5964b442-8a4c-4306-f846-75a58e880741",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SD7gMMAaqvQ6",
+        "outputId": "5964b442-8a4c-4306-f846-75a58e880741"
       },
       "execution_count": 27,
       "outputs": [
@@ -4440,11 +4440,11 @@
         "joblib.dump(y_pred, \"ensemble_preds.npy\")\n"
       ],
       "metadata": {
-        "id": "Ql2orsZ-tmFJ",
-        "outputId": "41654541-f1bc-4441-9996-ae33881ad85e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ql2orsZ-tmFJ",
+        "outputId": "41654541-f1bc-4441-9996-ae33881ad85e"
       },
       "execution_count": 30,
       "outputs": [
@@ -4472,12 +4472,135 @@
           "execution_count": 30
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.metrics import (\n",
+        "    mean_squared_error,\n",
+        "    mean_absolute_error,\n",
+        "    mean_absolute_percentage_error,\n",
+        "    r2_score\n",
+        ")\n",
+        "import joblib\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import load_model\n",
+        "\n",
+        "# 1. Load dataset\n",
+        "df = pd.read_csv(\"k_sc_opt_full_dataset.csv\")\n",
+        "input_cols = [\n",
+        "    \"Irradiance\",\"AmbientTemp\",\"rload\",\"cload\",\n",
+        "    \"Inductor\",\"Capacitor\",\"Vpv_avg\",\"Ipv_avg\",\"dV\",\"dP\"\n",
+        "]\n",
+        "X = df[input_cols].values\n",
+        "y = df[\"k_sc_opt\"].values\n",
+        "\n",
+        "# 2. Split into (train+val) and test\n",
+        "X_trval, X_test, y_trval, y_test = train_test_split(\n",
+        "    X, y, test_size=0.15, random_state=42\n",
+        ")\n",
+        "\n",
+        "# precompute mean of true k_sc for percentage metrics\n",
+        "mean_k = np.mean(y_test)\n",
+        "\n",
+        "# 3. Load your models\n",
+        "ensemble1 = joblib.load(\"/content/ensemble_rf_xgb.pkl\")\n",
+        "ensemble2 = joblib.load(\"/content/ensemble_preds.npy\") # predictions array\n",
+        "rf_model  = joblib.load(\"/content/direct_rf_tuned.pkl\")\n",
+        "xgb_model = joblib.load(\"/content/direct_xgb_tuned.pkl\")\n",
+        "lgb_model = joblib.load(\"/content/direct_lgb_randsearch.pkl\")\n",
+        "\n",
+        "# 4. Load MLP and its scaler\n",
+        "mlp_scaler = joblib.load(\"/content/scaler_X_direct_mlp.pkl\")\n",
+        "mlp_model  = load_model(\"/content/direct_mlp_upgraded.h5\", compile=False)\n",
+        "\n",
+        "# 5. Prepare models dict\n",
+        "models = {\n",
+        "    \"Ensemble #1\":    ensemble1,\n",
+        "    \"Ensemble #2\":    ensemble2,\n",
+        "    \"RF Tuned\":       rf_model,\n",
+        "    \"XGB Tuned\":      xgb_model,\n",
+        "    \"LGB RandSearch\": lgb_model,\n",
+        "    \"MLP Upgraded\":   mlp_model\n",
+        "}\n",
+        "\n",
+        "# 6. Evaluate each on the test set\n",
+        "results = []\n",
+        "for name, model in models.items():\n",
+        "    if name == \"MLP Upgraded\":\n",
+        "        X_in = mlp_scaler.transform(X_test)\n",
+        "        y_pred = model.predict(X_in).ravel()\n",
+        "    elif name == \"Ensemble #2\":\n",
+        "        y_pred = model  # already a numpy array of predictions\n",
+        "    else:\n",
+        "        y_pred = model.predict(X_test)\n",
+        "\n",
+        "    # absolute errors\n",
+        "    rmse_abs = np.sqrt(mean_squared_error(y_test, y_pred))\n",
+        "    mae_abs  = mean_absolute_error(y_test, y_pred)\n",
+        "\n",
+        "    # percentage errors\n",
+        "    rmse_pct = (rmse_abs / mean_k) * 100\n",
+        "    mae_pct  = (mae_abs  / mean_k) * 100\n",
+        "    mape_pct = mean_absolute_percentage_error(y_test, y_pred) * 100\n",
+        "    r2       = r2_score(y_test, y_pred)\n",
+        "\n",
+        "    results.append({\n",
+        "        \"Model\":  name,\n",
+        "        \"R²\":     f\"{r2:.3f}\",\n",
+        "        \"RMSE%\":  f\"{rmse_pct:.2f}%\",\n",
+        "        \"MAE%\":   f\"{mae_pct:.2f}%\",\n",
+        "        \"MAPE%\":  f\"{mape_pct:.2f}%\"\n",
+        "    })\n",
+        "\n",
+        "# 7. Display results\n",
+        "df_results = pd.DataFrame(results, columns=[\"Model\",\"R²\",\"RMSE%\",\"MAE%\",\"MAPE%\"])\n",
+        "print(\"\\nTest-set Performance Comparison:\")\n",
+        "print(df_results.to_string(index=False))\n"
+      ],
+      "metadata": {
+        "id": "-InVU5vpx7JM",
+        "outputId": "ca82bd7d-4e7e-44f4-eef1-5e7a3ec1dbbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.11/dist-packages/sklearn/utils/deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
+            "  warnings.warn(\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\u001b[1m50/50\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 5ms/step\n",
+            "\n",
+            "Test-set Performance Comparison:\n",
+            "         Model    R²  RMSE%  MAE%  MAPE%\n",
+            "   Ensemble #1 0.874 15.38% 7.01% 11.80%\n",
+            "   Ensemble #2 0.881 14.93% 7.50% 12.84%\n",
+            "      RF Tuned 0.870 15.64% 6.97% 11.90%\n",
+            "     XGB Tuned 0.872 15.51% 7.39% 12.20%\n",
+            "LGB RandSearch 0.862 16.11% 8.51% 14.85%\n",
+            "  MLP Upgraded 0.851 16.74% 9.80% 16.98%\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOmWAKAWXtrISMqMTCq1/Q0",
+      "authorship_tag": "ABX9TyN6TCOGqsTEPbGYWKTA/OiO",
       "include_colab_link": true
     },
     "kernelspec": {
